fixed alignment

--- a/css/scss/pages/_portfolio.scss
+++ b/css/scss/pages/_portfolio.scss
@@ -518,7 +518,7 @@ img {
         padding: 0 0 100px;
         pre::first-line {
             font-size: 24px;
-            line-height: 32px;
+            line-height: 64px;
             letter-spacing: 3px;
             font-weight: 600;
         }
